fix layout bugs

--- a/webportal/src/app/job/job-submit/job-submit.component.scss
+++ b/webportal/src/app/job/job-submit/job-submit.component.scss
@@ -11,3 +11,7 @@ input[type=submit]#submitJob {
 div#editor-holder {
     overflow: auto;
 }
+
+textarea {
+    resize: both;
+}
